[StickyScrolling] Add extension point for sticky lines provider
In order to implement editor/language specific sticky lines provider, a new extension point is introduced.

--- a/bundles/org.eclipse.ui.editors/plugin.properties
+++ b/bundles/org.eclipse.ui.editors/plugin.properties
@@ -20,6 +20,7 @@ ExtPoint.documentProviders= Document Provider
 ExtPoint.markerAnnotationSpecification= Marker Annotation Specification
 ExtPoint.annotationTypes= Annotation Types
 ExtPoint.editorTemplate= Editor Template
+ExtPoint.stickyLinesProviders= Sticky Lines Provider
 
 convertDelimiters.Windows.name= Convert Line Delimiters to Windows (CRLF, \\r\\n, 0D0A, \u00A4\u00B6)
 convertDelimiters.Windows.label= &Windows (CRLF, \\r\\n, 0D0A, \u00A4\u00B6)
